src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: 'Inter', sans-serif;
    scrollbar-width: thin;
  }

  /* Firefox */
  html.dark {
    scrollbar-color: #404040 #262626;
  }

  /* Chrome, Safari */
  html::-webkit-scrollbar {
    width: 12px;
  }

  html::-webkit-scrollbar-thumb {
    background-color: #a3a3a3;
  }

  html.dark::-webkit-scrollbar-track {
    background: #262626;
  }

  html.dark::-webkit-scrollbar-thumb {
    background-color: #404040;
  }
}

@layer components {
  .skills-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, 70px);
  }
}

